<resources>
    <string name="app_name">Social Network</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="discover">Discover</string>
    <string name="feeds">Feeds</string>
    <string name="dummy_name">Martina Nenad</string>
    <string name="dummy_time">30 minutes ago</string>
    <string name="dummy_long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="dummy_likes">77</string>
    <string name="dummy_comment">%1$s Comments</string>
    <string name="dummy_shares">%1$s shares</string>
    <string name="dummy_username">Simons</string>
</resources>