<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_margin="8dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/feed_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/splashy"
            app:shapeAppearanceOverlay="@style/RoundImage" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/feed_img"
            android:fontFamily="@font/laila"
            android:text="@string/dummy_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_tv"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@id/feed_img"
            android:layout_toRightOf="@id/feed_img"
            android:text="@string/dummy_time"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/post_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_tv"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/feed_img"
            android:layout_toRightOf="@id/feed_img"
            android:fontFamily="@font/laila"
            android:text="@string/dummy_long_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/likes_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_tv"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@id/feed_img"
            android:layout_toRightOf="@id/feed_img"
            android:drawablePadding="8dp"
            android:fontFamily="@font/laila"
            android:text="@string/dummy_likes"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/likes_ic"
            app:drawableStartCompat="@drawable/likes_ic" />

        <TextView
            android:id="@+id/comments_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_tv"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@id/likes_tv"
            android:layout_toRightOf="@id/likes_tv"
            android:drawablePadding="8dp"
            android:fontFamily="@font/laila"
            android:text="@string/dummy_comment"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/comment_ic" />

        <TextView
            android:id="@+id/shares_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_tv"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@id/comments_tv"
            android:drawablePadding="8dp"
            android:fontFamily="@font/laila"
            android:text="@string/dummy_shares"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/shares_ic"
            app:drawableStartCompat="@drawable/shares_ic" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>