<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.FeedFragment">

    <TextView
        android:id="@+id/discover_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        android:fontFamily="@font/laila"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/discover" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/my_story_iv"
        app:shapeAppearanceOverlay="@style/RoundImage"
        android:layout_width="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_img"
        android:layout_margin="8dp"
        android:layout_below="@id/discover_tv"
        android:layout_height="70dp"/>

    <TextView
        android:id="@+id/username_tv"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/laila"
        android:textSize="16sp"
        android:layout_below="@id/my_story_iv"
        android:text="@string/dummy_username"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/story_list"
        android:layout_below="@id/discover_tv"
        android:layout_toRightOf="@id/my_story_iv"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/feeds_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/story_list"
        android:layout_margin="8dp"
        android:textSize="30sp"
        android:fontFamily="@font/laila"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/feeds" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feed_list"
        android:layout_below="@id/feeds_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_round_add_24"
        android:focusable="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>